# middleware/validate.js
@@ -30,6 +30,27 @@ const saveRecipe = (req, res, next) => {
   });
 };
 
+const saveContact = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
+    favoriteColor: 'required|string',
+    birthday: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveRecipe
+  saveRecipe, saveContact
 };
